--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "babel-rename-assigned-properties",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Rename and add aliases for object properties that are being assigned a value",
   "main": "lib",
+  "jsnext:main": "src/index.js",
   "files": [
     "lib"
   ],
@@ -13,6 +14,10 @@
     "babel": "babel src -d lib",
     "lint": "eslint src test",
     "cover": "babel-node ./node_modules/.bin/isparta cover _mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jamonkko/babel-rename-assigned-properties.git"
   },
   "keywords": [
     "babel",
@@ -25,6 +30,10 @@
   ],
   "author": "Jarkko Mönkkönen <jamonkko@gmail.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jamonkko/babel-rename-assigned-properties/issues"
+  },
+  "homepage": "https://github.com/jamonkko/babel-rename-assigned-properties#readme",
   "devDependencies": {
     "babel-cli": "^6.6.4",
     "babel-eslint": "^6.0.2",
