--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-rename-assigned-properties",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Rename and add aliases for object properties that are being assigned a value",
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
@@ -14,7 +14,13 @@
     "build": "npm run lint && npm test && npm run babel",
     "babel": "babel src -d lib",
     "lint": "eslint src test",
-    "cover": "babel-node ./node_modules/.bin/isparta cover _mocha"
+    "cover": "nyc --require babel-core/register --all mocha",
+    "cover:report:coveralls": "nyc report --reporter=text-lcov | coveralls"
+  },
+  "nyc": {
+    "include": [
+      "src"
+    ]
   },
   "repository": {
     "type": "git",
@@ -41,12 +47,12 @@
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
+    "dedent": "^0.6.0",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^9.0.0",
     "eslint-plugin-import": "^1.7.0",
     "estraverse-fb": "^1.3.1",
-    "isparta": "^4.0.0",
-    "lodash": "^4.12.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "nyc": "^6.4.4"
   }
 }
