--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,12 @@
 {
-  "env": {
-    "node": true
+  env: {
+    node: true
   },
-  "parser": "babel-eslint",
-  "extends": "airbnb/base",
-  "rules": {
-    "strict": 0,
-    "semi": [2, "never"],
-    comma-dangle: [2, "never"]
+  parser: 'babel-eslint',
+  extends: 'airbnb/base',
+  rules: {
+    strict: 0,
+    semi: [2, 'never'],
+    comma-dangle: [2, 'never'] 
   }
 }
