--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "homepage": "https://github.com/jamonkko/babel-plugin-rename-assigned-properties#readme",
   "devDependencies": {
     "babel-cli": "^6.8.0",
+    "babel-core": "^6.13.2",
     "babel-eslint": "^6.0.4",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
