--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: node_js
 
 node_js:
   - stable
-  - 5
   - 6
-
+  - 5
+  - 0.12
+  - 0.10
+  
 install:
   - npm install
 
-script:
-  - npm run build
-  - npm run cover
-
+script: if [[ `node -v` == v0.10* ]]; then npm test; else npm run build && npm run cover; fi
+  
 after_script: 'npm run cover:report:coveralls'
