--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-cli": "^6.8.0",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.0.4",
+    "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
@@ -55,5 +56,8 @@
     "estraverse-fb": "^1.3.1",
     "mocha": "^3.0.2",
     "nyc": "^8.1.0"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.11.6"
   }
 }
