--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "scripts": {
     "test": "mocha --ui tdd",
     "autotest": "mocha --ui tdd --watch",
-    "build": "npm run lint && npm test && npm run babel",
+    "build": "npm run standard && npm test && npm run babel",
     "babel": "babel src -d lib",
-    "lint": "eslint src test",
+    "standard": "standard",
     "cover": "nyc --require babel-core/register --reporter=lcov --reporter=text --all mocha",
     "cover:report:coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
@@ -50,14 +50,14 @@
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "dedent": "^0.6.0",
-    "eslint": "^3.2.0",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^1.12.0",
-    "estraverse-fb": "^1.3.1",
     "mocha": "^3.0.2",
-    "nyc": "^8.1.0"
+    "nyc": "^8.1.0",
+    "standard": "^8.3.0"
   },
   "dependencies": {
     "babel-runtime": "^6.11.6"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   }
 }
