--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,18 @@ node_js:
   - 0.12
   - 0.10
 
+before_install:
+  # Repo for newer Node.js versions
+  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
+  # Repo for Yarn
+  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn
+cache:
+  directories:
+  - $HOME/.yarn-cache
+
 install: if [[ `node -v` == v0.1* ]]; then npm install; else yarn install; fi
 
 script: if [[ `node -v` == v0.1* ]]; then npm test; else npm run build && npm run cover; fi
