--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,12 @@ node_js:
 
 before_install:
   # Repo for newer Node.js versions
-  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
+  - if [[ `node -v` == v0.1* ]]; then curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -                                    ; fi
   # Repo for Yarn
-  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
-  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  - sudo apt-get update -qq
-  - sudo apt-get install -y -qq yarn
+  - if [[ `node -v` == v0.1* ]]; then sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg                             ; fi
+  - if [[ `node -v` == v0.1* ]]; then echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list ; fi
+  - if [[ `node -v` == v0.1* ]]; then sudo apt-get update -qq                                                                           ; fi
+  - if [[ `node -v` == v0.1* ]]; then sudo apt-get install -y -qq yarn                                                                  ; fi
 cache:
   directories:
   - $HOME/.yarn-cache
@@ -24,3 +24,4 @@ install: if [[ `node -v` == v0.1* ]]; then npm install; else yarn install; fi
 script: if [[ `node -v` == v0.1* ]]; then npm test; else npm run build && npm run cover; fi
 
 after_script: 'npm run cover:report:coveralls'
+
