--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 
+cache: yarn
+
 node_js:
   - stable
   - 6
@@ -7,21 +9,8 @@ node_js:
   - 0.12
   - 0.10
 
-before_install:
-  # Repo for newer Node.js versions
-  - if [[ `node -v` != v0.1* ]]; then curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -                                    ; fi
-  # Repo for Yarn
-  - if [[ `node -v` != v0.1* ]]; then sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg                             ; fi
-  - if [[ `node -v` != v0.1* ]]; then echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list ; fi
-  - if [[ `node -v` != v0.1* ]]; then sudo apt-get update -qq                                                                           ; fi
-  - if [[ `node -v` != v0.1* ]]; then sudo apt-get install -y -qq yarn                                                                  ; fi
-cache:
-  directories:
-  - $HOME/.yarn-cache
-
 install: if [[ `node -v` == v0.1* ]]; then npm install; else yarn install; fi
 
 script: if [[ `node -v` == v0.1* ]]; then npm test; else npm run build && npm run cover; fi
 
 after_script: 'npm run cover:report:coveralls'
-
