--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ addons:
         key_url: 'https://dl.yarnpkg.com/debian/pubkey.gpg'
     packages:
       - yarn
+  code_climate:
+      repo_token: 876df78288574adc2ea5ad95f3366b8ac0c7c61ef6e1653118077cd17fb5d178
 
 node_js:
   - stable
@@ -22,4 +24,7 @@ install: if [[ `node -v` == v0.1* ]]; then npm install; else yarn install; fi
 
 script: if [[ `node -v` == v0.1* ]]; then npm test; else yarn build && yarn cover; fi
 
-after_script: 'npm run cover:report:coveralls'
+after_success:
+ - if [[ `node -v` == v7* ]]; then yarn cover:report:coveralls; fi
+ - if [[ `node -v` == v7* ]]; yarn global add codeclimate-test-reporter fi
+ - if [[ `node -v` == v7* ]]; codeclimate-test-reporter < coverage/lcov.info fi
