--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ script: if [[ `node -v` == v0.1* ]]; then npm test; else yarn build && yarn cove
 
 after_success:
  - if [[ `node -v` == v7* ]]; then yarn cover:report:coveralls; fi
- - if [[ `node -v` == v7* ]]; yarn global add codeclimate-test-reporter fi
- - if [[ `node -v` == v7* ]]; codeclimate-test-reporter < coverage/lcov.info fi
+ - if [[ `node -v` == v7* ]]; then yarn global add codeclimate-test-reporter fi
+ - if [[ `node -v` == v7* ]]; then codeclimate-test-reporter < coverage/lcov.info fi
