--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "src"
   ],
   "scripts": {
-    "test": "mocha --ui tdd",
     "autotest": "mocha --ui tdd --watch",
     "build": "npm run standard && npm test && npm run babel",
     "babel": "babel src -d lib",
-    "standard": "standard",
+    "build": "npm run header && npm run standard && npm test && npm run babel",
     "cover": "nyc --require babel-core/register --reporter=lcov --reporter=text --all mocha",
-    "cover:report:coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "cover:report:coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "standard": "standard",
+    "test": "mocha --ui tdd"
   },
   "nyc": {
     "include": [
