--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
 dist: trusty
 sudo: false
-cache: yarn
+cache:
+  yarn: true
+  directories:
+    - $HOME/.cache/yarn
+    - $HOME/.npm
 
 addons:
   apt:
@@ -15,16 +19,18 @@ addons:
 
 node_js:
   - stable
+  - 8
+  - 7
   - 6
   - 5
   - 0.12
   - 0.10
 
-install: if [[ `node -v` == v0.1* ]]; then npm install; else yarn install; fi
+install: if [[ `node -v` == v0.1* ]]; then npm install; elif [[ `node -v` > v8 ]]; then npm install; else yarn install; fi
 
-script: if [[ `node -v` == v0.1* ]]; then npm test; else yarn build && yarn cover; fi
+script: if [[ `node -v` == v0.1* ]]; then npm test; elif [[ `node -v` > v8 ]]; then npm run build && npm run cover; else yarn build && yarn cover; fi
 
 after_success:
- - if [[ `node -v` == v7* ]]; then yarn cover:report:coveralls; fi
- - if [[ `node -v` == v7* ]]; then yarn global add codeclimate-test-reporter fi
- - if [[ `node -v` == v7* ]]; then codeclimate-test-reporter < coverage/lcov.info fi
+ - if [[ `node -v` == v8* ]]; then npm run cover:report:coveralls; fi
+ - if [[ `node -v` == v8* ]]; then npm install codeclimate-test-reporter --global fi
+ - if [[ `node -v` == v8* ]]; then codeclimate-test-reporter < coverage/lcov.info fi
