--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^8.0.0",
     "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "chai": "^4.1.0",
     "coveralls": "^3.0.0",
     "dedent": "^0.7.0",
