--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
     - $HOME/.cache/yarn
     - $HOME/.npm
 before_cache:
-  - rm -f $HOME/.npm/anonymous-cli-metrics.json
+  - echo "{}" > /home/travis/.npm/anonymous-cli-metrics.json
 
 addons:
   apt:
